tests/core/snapshots/ref-other-nested.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  firstUser: User1
}

type User {
  id: Int
  name: String
}

type User1 {
  user1: User2
}

type User2 {
  user2: User
}

schema {
  query: Query
}
