tests/core/snapshots/ref-other.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "user1": {
          "name": "Leanne Graham"
        }
      }
    }
  }
}
