tests/core/snapshots/ref-other.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Query {
  firstUser: User1
}

type User {
  id: Int
  name: String
}

type User1 {
  user1: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}
