tests/core/snapshots/related-fields-recursive.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream {
  query: Query
}

type NodeA {
  name: String
  nodeB: NodeB
}

type NodeB {
  name: String
  nodeA: NodeA
}

type Query {
  queryNodeA: [NodeA] @graphQL(url: "http://localhost:8083/graphql", name: "queryNodeA")
}
