tests/core/snapshots/rename-field.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user1": {
        "name": "Leanne Graham"
      }
    }
  }
}
