tests/core/snapshots/rename-field.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user1: User
  user2: User
}

type User {
  name: String
}

schema {
  query: Query
}
