tests/core/snapshots/request-to-upstream-batching.md_client.snap
---
source: tests/core/spec.rs
expression: client
---
scalar BigInt

scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user(id: Int!): User
}

scalar UnsignedInt

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
