tests/core/snapshots/request-to-upstream-batching.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(batchRequests: true) @upstream(batch: {delay: 1, headers: [], maxSize: 100}) {
  query: Query
}

type Query {
  user(id: Int!): User
    @http(
      baseURL: "http://jsonplaceholder.typicode.com"
      batch: {batchKey: "id", extractionPath: ["id"]}
      path: "/users"
      query: [{key: "id", value: "{{.args.id}}"}]
    )
}

type User {
  id: Int
  name: String
}
