tests/core/snapshots/resolve-with-headers.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post1": {
        "title": "post title"
      }
    }
  }
}
